--- a/13_finalproject/index.html
+++ b/13_finalproject/index.html
@@ -23,7 +23,68 @@
 <div class="textcontainer">
 <p class="margin"></p>
 
-<h3>Final Project: [INSERT FINAL PROJECT HERE]</h3>
+<h3>Final Project: Drawing Automaton</h3>
+
+<p>
+  I would still like to make a drawing automaton, or at least the foundation of one. The core of the project will be 
+  a drawing machine with an arm that mimics a human arm (wrist, elbow, shoulder). At minimum, I want to build the arm and have it be able to draw
+  several basic shapes when prompted. My goal is for it to be able to take as input some sort of path-based image sent from a computer
+  and draw that image. 
+</p>
+
+<h4>
+  Optimistic Timeline:
+</h4>
+<ul>
+  <li>
+    July 22: An arm that can move across the entire xy-plane where paper will go. This is the part of the project I'm
+    most worried about, because I'm still figuring out how it's going to work. Not necessarily driven by motors yet because 
+    I'm more concerned about its mechanics in general. I'd like it to have the full range of motion that it will need and determing
+    how joints will move in concert. 
+  </li>
+  <li>
+    Weekend of July 26: Figuring out how the motors will drive the arm and what the power source will be. Programming the arm to move to various locations
+    on the paper. Ideally able to draw something simple like a line or arc. Needs be able able to move across the drawing
+    plane and lift pencil vertically to separate lines. Maybe some sort of pressure sensor to determine z-movement.
+  </li>
+  <li>
+    Week of July 28: If the previous goal has been met, beginning to determine how svg paths or whatever can be translated
+    to movements of the arm. Probably will still be figuring out movement, though. 
+  </li>
+  <li>
+    Weekend of August 2: More programming. If things are going well, making decorative features like an body and a head.
+  </li>
+</ul>
+
+<h4>
+  Materials:
+</h4>
+<ul>
+  <li>
+    3 motors whose position I can set to run the arm (servos?)
+  </li>
+  <li>
+    Maybe ~4 sq feet of some sort of plywood to construct a desk and the majority of the arm
+  </li>
+  <li>
+    Some sort of power source for the motors, not sure what the best option would be. Laptop powered would be ideal I think.
+  </li>
+  <li>
+    Pressure sensor (Velostat?)
+  </li>
+  <li>
+    3D printed or cast hand
+  </li>
+  <li>
+    Pencil
+  </li>
+  <li>
+    Microcontroller
+  </li>
+  <li>
+    Joints, maybe 3D printed 
+  </li>
+</ul>
 
 
 </div>
