--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <br>[Week 2: 2D Design](./02_2Ddesign/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./03_fabrication/week3-placeholder-image.jpg" alt = "week 3 placeholder"> </image>
+      <image style = "width: 75%" src = "03_fabrication/img/working-gears.gif" alt = "week 3 placeholder"> </image>
       <br>[Week 3: Fabrication](./03_fabrication/index.html)
     </div>
   </div>
@@ -44,7 +44,7 @@
       <br>[Week 4: Programming](./04_microcontroller/index.html)
     </div>
     <div class="col-sm-4">
-      <image style = "width: 75%"src = "./05_3Ddesign/week5-placeholder-image.jpg" alt = "week 5 placeholder"> </image>
+      <image style = "width: 75%"src = "05_3Ddesign/models/hand2.jpg" alt = "week 5 placeholder"> </image>
       <br>[Week 5: 3D Design](./05_3Ddesign/index.html)
     </div>
     <div class="col-sm-4">
