--- a/07_outputs/index.html
+++ b/07_outputs/index.html
@@ -111,8 +111,16 @@ void Backtrack() {
   </div>
 </div>
 
+
 <div class="row">
-  <div class="col-6">
+  <div class="col">
+    I tried to use the oscilloscope, but I don't think I did it correctly because the only signal I could find looked like noise. I was expecting regular pulses of varying widths from writeMicroseconds() to set servo position, but that's not what I saw. 
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-4">
+    <img width="100%" src="files/oscilloscope.JPG">
   </div>
 </div>
 
